--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,13 +24,14 @@
         android:id="@+id/sliderValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="224dp"
         android:text="default"
         android:textColor="#000"
         android:textSize="30sp"
+        app:layout_constraintHorizontal_bias="0.224"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/seekbar_placeholder"
-        android:layout_marginTop="35dp"/>
+        app:layout_constraintTop_toTopOf="@+id/seekbar_placeholder" />
 
     <TextView
         android:id="@+id/name"
@@ -42,8 +43,10 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.346"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sliderValue" />
+        app:layout_constraintTop_toBottomOf="@+id/sliderValue"
+        app:layout_constraintVertical_bias="0.06" />
 
 
 
